# GoonGet

./: README.md  api_calls.py  creds_handler.py  display_handler.py  main.py  pyproject.toml  tag_handler.py
GoonGet/: api_calls.py  display_handler.py
goonget/: api_calls.py  creds_handler.py  display_handler.py  help.py  main.py  settings_handler.py  settings_ncurses.py  tag_handler.py
scripts/: gg  goonget
